# c4bot

./: .gitignore  CMakeLists.txt  InputNeuron.h  Makefile  Network.cpp  Network.h  Neuron.cpp  Neuron.h  OutputNeuron.h  Synapse.cpp  Synapse.h  c4BotMc.cpp  c4BotMc.h  c4bot.cpp  c4bot.h  c4botAB.cpp  c4botAB.h
Networks/Generation-0/: 0-0.csv
